<resources>
    <string name="app_name">GameNews</string>
    <string name="Logintxt">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="ForgotPass">Forgot Password?</string>
    <string name="SignUp">Signup Now</string>
    <string name="logged">Congratulations, You have successfully logged on GamesNews</string>
    <string name="Fail2log1">Access Denied: </string>
    <string name="Fail2log2">Something went wrong...</string>
    <string name="hint">Type what you want to find</string>

    <!--Settings-->
    <string name="Game1">Games</string>

    <string name="News">News</string>
    <string name="Favorites">Favorites</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Log out</string>

    <string name="homeActivity">Home</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
