<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/News" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/Favorites" />

    </group>

    <item
        android:id="@+id/games"
        android:title="@string/Game1">
        <menu>


        </menu>
    </item>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:title="@string/Settings"
            android:icon="@drawable/ic_settings_black_24dp"
            />
        <item
            android:id="@+id/Logout"
            android:title="@string/Logout"
            android:icon="@drawable/ic_account_circle_black_24dp"
            />

    </group>

</menu>
